[tool.poetry]
name = "tonnetz"
version = "0.1.0"
description = ""
authors = ["Neeraja Abhyankar <neeraja.abhyankar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libmogra = "0.3.1"
numpy = "^2.2.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
